# alarm_clock_remote

./: .gitignore  CMakeLists.txt
components/mpu6050_bak/: CMakeLists.txt
components/mpu6050_bak/include/: mpu6050.h  quaternions.h  roll_pitch.h
main/: CMakeLists.txt  Kconfig_espnow.projbuild  accelerometer_task.cpp  accelerometer_task.h  alarm_clock_remote.cpp  alarm_clock_remote.h  buzz_task.cpp  buzz_task.h  espnow_example.h  espnow_example_main.cpp  main.c  nvs_wrapper.cpp  nvs_wrapper.h  wifi_config.cpp  wifi_config.h
